assets/css/game.css
/*------------------------------------------UTILITIES*/
#game {
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  position: absolute;
  margin-top: 5%;
}

.questionBox {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  top: 10vh;
  width: 30rem;
  height: 20rem;
  background-color: #A1A0E0;
  border-radius: 0.5rem;
  padding: 1rem 1rem;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-bottom: 1.8rem;
}

.choice-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-bottom: 1rem;
  width: 30rem;
  max-height: 7rem;
  background-color: #5D59FF;
  border-radius: 0.5rem;
}

.choice-text {
  padding: 1.8rem;
  width: 100%;
  height: 100%;
}

.questionCount {
  width: 100%;
}

.choice-container:hover {
  cursor: pointer;
  -webkit-box-shadow: 0 1rem 1.5rem 0 rgba(57, 28, 95, 0.5);
          box-shadow: 0 1rem 1.5rem 0 rgba(57, 28, 95, 0.5);
  -webkit-transform: translateY(-0.3rem);
          transform: translateY(-0.3rem);
  -webkit-transition: -webkit-transform 200ms;
  transition: -webkit-transform 200ms;
  transition: transform 200ms;
  transition: transform 200ms, -webkit-transform 200ms;
}

.wrong {
  background-color: #E85252;
  width: 30rem;
  height: 100%;
}

.right {
  background-color: #71CA52;
  width: 30rem;
  height: 100%;
}

.progressBar {
  width: 100vw;
  height: 2rem;
  background-color: #fff;
  position: absolute;
  bottom: 0;
  left: 0;
}

#progressBarPercentage {
  height: 2rem;
  background-color: #FF9F46;
  width: 0%;
}

/*-------------------------------------------Media Queries*/
@media (min-width: 1220px) {
  /*Utilities*/
  #game {
    margin-top: 0;
  }
  .questionBox {
    width: 45rem;
    height: 30rem;
    padding: 1rem 2rem;
  }
  .choice-container {
    margin-bottom: 2.5rem;
    width: 45rem;
    height: 7rem;
  }
  /*Text*/
  .questionBox h2 {
    font-size: 3.6rem;
    padding: 1rem;
  }
  .choice-text {
    font-size: 3rem;
  }
  .wrong {
    width: 45rem;
  }
  .right {
    width: 45rem;
  }
}
/*# sourceMappingURL=game.css.map */

